Full Comprehensive Comparison Tests (#9)
* Update .gitignore

* initial commit for imprint-java

* initial commit for imprint-java

* Add GitHub Actions CI workflow for automated testing

* Update GitHub Actions workflow to use upload-artifact@v4

* Add Gradle wrapper validation to CI workflow

* Fix gitignore to include gradle-wrapper.jar for CI

* Force add gradle-wrapper.jar to repository

* Update wrapper validation action to v3

* Fix Javadoc syntax errors and disable strict Javadoc checking

* Add JMH benchmark .bat and .sh for full suite benchmarking and performance tracking; add comprehensive String benchmark

* fix map serialization error in benchmark test and streamline ci file to remove a bunch of stuff

* Add execute permissions back for gradlew in CI

* Add some more string based performance benchmarks and try to make string deserialization a bit faster

* second main commit to address initial commits

A full list of enhancements can be found here - https://github.com/imprint-serde/imprint-java/issues/3

* additional cleanup to address concerns in https://github.com/imprint-serde/imprint-java/issues/3

* minor style fixes

* minor style fixes again

* minor style fixes on benchmark tests and supress unused

* minor reordering

* Merge Comparisons into dev branch (#8)

* Full comprehensive comparison tests with a lot of other libraries + some micro-optimizations added that were found along the way

* replace deprecated gradle methods with latest

---------

Co-authored-by: expand3d <>

* minor cleanup

* minor cleanup

* minor cleanup

* Actually fixes offsets and read Byte Values for Maps and Arrays even with nested objects

* change CI file to use JMH plugin to respect iteration and warmup values in gradle file. Also fix permission issue

* ok plugin didn't work apparently so reverting that and just reducing Comparison tests iterations manually

---------

Co-authored-by: expand3d <>